# ballBounce

./: CMakeLists.txt  Makefile  README.md  ball.c  ball.h  ball_debug  ball_sdl  ball_sdl.c  ball_sdl.h  fast_ball.c  fast_ball.h  main.c  main.h  string_functions.c
cmake/: FindCheck.cmake
src/: ball_sdl.c  main.c  main.h  string_functions.c
tests/: check_ball.c  check_ball.check.c  test_ball
